Thu Mar  9 23:42:19 2006  Tim Janik  <timj@gtk.org>

	* tests/*: fixed or changed the license to LGPL with permission
	from Stefan Westerfeld (required for some files).

Thu Mar  9 21:08:13 2006  Tim Janik  <timj@gtk.org>

	* tools/bsefcompare.cc:
	* tools/bsefextract.cc:
	* tools/bsewavetool.cc:
	* tools/bsewavetool.hh:
	* tools/bwtwave.cc:
	* tools/bwtwave.hh:
	fixed or changed the license to LGPL with permission from Stefan
	Westerfeld (required for some files).

Thu Mar  9 21:03:17 2006  Tim Janik  <timj@gtk.org>

	* web/*: fix missing licenses.

Thu Mar  9 20:52:59 2006  Tim Janik  <timj@gtk.org>

	* acbeast.m4:
	* configure.in: 
	* birnet/configure.inc: applied patch from Ralf Wildenhues
	<Ralf.Wildenhues@gmx.de> to work with newer autoconf.
	 clarified licensing to mention LGPL explicitely in all places.

	* autogen.sh: clear autom4te cache. clarified licensing to mention
	LGPL explicitely in all places.

Thu Mar  9 18:19:02 2006  Tim Janik  <timj@gtk.org>

	* web/download.doxi:
	* configure.in: removed texitheque traces.

Thu Mar  9 18:05:14 2006  Tim Janik  <timj@gtk.org>

	* *.c: adapted to birnet_ namespace.

Thu Mar  9 03:12:11 2006  Tim Janik  <timj@gtk.org>

	* shell/bsescminterp.c: adapted to birnet_ namespace.

	* shell/bsesh.c: initialization fixes.

Tue Mar  7 02:31:18 2006  Tim Janik  <timj@gtk.org>

	* configure.in: up version to 0.7.0, binary 0, interface 0.

	* merged libsfi.la and libbirnet.la into libbse.la, so only
	libbse.so is installed as public library now.

	* configure.in:
	* Makefile.am: added birnet/.

	* configure.in: execute checks from birnet/configure.inc.
	comment fixups.
	
	* data/bse.pc.in: libbse.so doesn't link against libsfi.so anymore.

	* data/Makefile.am:
	* data/sfi.pc.in: removed.

Sat Mar  4 16:11:33 2006  Tim Janik  <timj@gtk.org>

	* web/style/beast-style.css: turn the font-weight for unexisting
	wiki pages from bold back to normal.

Sat Mar  4 14:13:27 2006  Tim Janik  <timj@gtk.org>
