@@ -1,4 +1,20 @@
 ;; -*- scheme -*-
+;; Copyright (C) 2001-2006 Tim Janik
+;;
+;; This software is provided "as is"; redistribution and modification
+;; is permitted, provided that the following disclaimer is retained.
+;;
+;; This software is distributed in the hope that it will be useful,
+;; but WITHOUT ANY WARRANTY; without even the implied warranty of
+;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+;; In no event shall the authors or contributors be liable for any
+;; direct, indirect, incidental, special, exemplary, or consequential
+;; damages (including, but not limited to, procurement of substitute
+;; goods or services; loss of use, data, or profits; or business
+;; interruption) however caused and on any theory of liability, whether
+;; in contract, strict liability, or tort (including negligence or
+;; otherwise) arising in any way out of the use of this software, even
+;; if advised of the possibility of such damage.
 
 ;; allow i18n markup of strings
 (define _  (lambda arglist (bse-gettext (apply string-append arglist))))   ;; translate concatenated string
